c plus KC (je crois)

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,8 @@
 	border: 1px solid white;
 	background-color: #DEDEDE;
 	border-radius: 7px ;
+	min-height: 240px;
+  max-height: 240px;
 }
 
 .movebox input{
