--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,117 @@
+body
+{
+	font-family: 'Roboto', sans-serif;
+	margin: 0;
+}
 
-.user{
+.banniere
+{
+	height : 10em;
+	position: relative;
+	background-color: #F8F8F8;
+	margin-top: 0px;
+	border-bottom: 1px solid #E7E7E7;
+	margin-bottom: 30px;
+}
+
+.banniere h1
+{
+	font-weight: normal;
+	margin: 0;
+	position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+	text-align: center;
+    /*background-color: green;*/
+}
+
+.button
+{
+  padding: 10px 28px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+	font-weight: normal;
+	border-radius: 4px;
+}
+
+.btn-white
+{
+	background-color: #FFFFFF;
+	border: 1px solid #CCCCCC;
+	color: black;
+}
+
+.btn-white:hover
+{
+	background-color: #E2E2E2;
+	color: black;
+}
+
+.btn-blue
+{
+	background-color: #5BC0DE;
+  border: none;
+  color: white;
+}
+
+.btn-blue:hover
+{
+	background-color: #228AA8;
+	color: white;
+}
+
+.btn-red
+{
+	background-color: #D9534F;
+  border: none;
+  color: white;
+}
+
+.btn-red:hover
+{
+	background-color: #AF2825;
+	color: white;
+}
+
+a:hover
+{
+	text-decoration: none;
+}
+
+.inputPseudo
+{
+	font-size:20pt;
+		height:30px;
+		width:300px;
+}
+
+.connexionDiv{
+	text-align: center;
+	font-size: 1.5em;
+}
+
+.connexionDiv button{
+	margin-top: 10px;
+}
+
+.user
+{
 	font-size: 1.2em;
-	text-decoration: bold;
+	font-weight: bold;
 	position : absolute;
 	top : 2%;
 	right: 2%;
 	/*background-color: red;*/
 }
 
-.user span{
+.user span
+{
 	margin-right: 10px;
 	/*background-color: pink;*/
-}
-
-.banniere{
-	height : 10em;
-	position: relative;
-	/*background-color: yellow;*/
-}
-
-.banniere h1{
-	margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
-    /*background-color: green;*/
 }
 
 .new-move-btn{
@@ -48,6 +133,7 @@
 	border-radius: 7px ;
 	min-height: 240px;
   max-height: 240px;
+	min-width: 160px;
 }
 
 .movebox input{
@@ -69,11 +155,76 @@
 	margin-top: 5px;
 }
 
-.connexionDiv{
-	text-align: center;
-	font-size: 1.5em;
+.formDiv
+{
+	border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
 
-.connexionDiv button{
-	margin-top: 10px;
+.formDiv input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0px;
+  box-sizing: border-box;
+}
+
+.formDiv button {
+  width: 100%;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btnDiv
+{
+	text-align: center;
+}
+
+.rec-btn
+{
+    width:200px;
+    height:200px;
+    line-height:50px;
+		border: none;
+    border-radius: 50%;
+    color:#f5f5f5;
+    text-align:center;
+    text-decoration:none;
+    background: #4CAF50;
+    font-size:20px;
+    font-weight:bold;
+		box-shadow: 0 9px #999;
+
+}
+
+.rec-btn:active {
+  background-color: #4CAF50;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.stop-btn
+{
+    width:200px;
+    height:200px;
+    line-height:50px;
+		border: none;
+    border-radius: 50%;
+    color:#f5f5f5;
+    text-align:center;
+    text-decoration:none;
+    background: #f44336;
+    font-size:20px;
+    font-weight:bold;
+		box-shadow: 0 9px #999;
+
+}
+
+.stop-btn:active {
+  background-color: #f44336;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
